--- a/sonichq/comics/reviews/sonic/s51.htm
+++ b/sonichq/comics/reviews/sonic/s51.htm
@@ -4,13 +4,11 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
-<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="/sonichq/comics/images/background.jpg">
+<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%>
 
-<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="/sonichq/comics/images/background.jpg">
+<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +21,7 @@ This Week In Review: Sonic #51 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="https://web.archive.org/20011106000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic51.jpg"></p>
+<center><p><IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic51.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Victory SUCKS !!!!!!!! - and apparently, so does this issue...</p>
 <p>Sonic The Hedgehog #51<br>
@@ -108,7 +106,7 @@ uh, ahhh--- that would be telling", yes! You know what this mean!? Sonic is
 going to meet his father! Wohoo!
 <hr>
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif">
 </p>
 
 <p>Ok, this issue over all isn't that good, but the plot twist at the end made
@@ -121,3 +119,7 @@ wait to read #53, where Naugus make his first appearence in the comic.
 </td>
 
 </td></tr></table>
+
+</table>
+</body>
+</html>
