--- a/sonichq/comics/reviews/sonic/s54.htm
+++ b/sonichq/comics/reviews/sonic/s54.htm
@@ -6,11 +6,9 @@
 </head>
 <body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
-<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="/sonichq/comics/images/background.jpg">
+<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%>
 
-<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="/sonichq/comics/images/background.jpg">
+<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" >
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +21,7 @@ This Week In Review: Sonic #54 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic54.jpg"></p>
+<center><p><IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic54.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>I Really Dislike Getting An Up Close View Of Snively's Nasal Cavity. You Could Hide A Tank In That Thing....</p>
 <p>Sonic The Hedgehog #54<br>
@@ -130,7 +128,7 @@ told Sonic to get back to Mobotropolis right away...........NEXT ISSUE:
 KHAN! As in Monkey Khan.
 <hr>
        
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> 1/2 rings
 </p>
 
 <p> This issue was REALLY GOOD. Karl hasn't seemed to grasp the "Sonic style" of writing though - but that doesnt make this issue not good!
@@ -147,3 +145,6 @@ If you want to see the preview, go to the preview page.
 </td>
 
 </td></tr></table>  
+</table>
+</body>
+</html>
