--- a/sonichq/comics/reviews/sonic/s55.htm
+++ b/sonichq/comics/reviews/sonic/s55.htm
@@ -6,11 +6,9 @@
 </head>
 <body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
-<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="/sonichq/comics/images/background.jpg">
+<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%>
 
-<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="/sonichq/comics/images/background.jpg">
+<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +21,7 @@ This Week In Review: Sonic #55 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="https://web.archive.org/20011106000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic55.jpg"></p>
+<center><p><IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic55.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>The Wrath Of Khan! "Planet Of The Apes" This <u>AIN'T...</u></p>
 <p>Sonic The Hedgehog #55<br>
@@ -149,7 +147,7 @@ taking some R-and-R.
 <hr>
 
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> 1/2 rings
 </p>
 
 <p>It's something of an impressive debut for Frank Strom.  It
@@ -232,7 +230,7 @@ in.  They barely get to utter five lines total when Knuckles calls
 them: "Excuse me, but you're needed for your cameo in Knuckles #9."
 <hr>
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif">
 </p>
 
 <p>The artwork-by-committee looks basically good, though Geoffrey
@@ -258,10 +256,14 @@ happened to "Growing Pains" (Sonic #28 and #29), I can't take it
 for granted that the Archie crew would know a great premise if it
 jumped up off the drawing board and started gnawing at theirankles.
 
-<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
+<p><b>Overall Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> 
 </p>
 
 
 </td>
 
 </td></tr></table>
+
+</table>
+</body>
+</html>
