--- a/sonichq/comics/reviews/sonic/s56.htm
+++ b/sonichq/comics/reviews/sonic/s56.htm
@@ -6,11 +6,9 @@
 </head>
 <body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
-<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="/sonichq/comics/images/background.jpg">
+<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%>
 
-<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="/sonichq/comics/images/background.jpg">
+<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" >
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +21,7 @@ This Week In Review: Sonic #56 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="https://web.archive.org/20011106000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic56.jpg"></p>
+<center><p><IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic56.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Super Teen Extraordinaire, Freakazoid! Freakazoid! Runs Around In Underwear, Freakazoid Freakazoid!
 <br>Super Sonic And Hyper Knuckles Tackle The Evil That Is....<u>FLUBBER !!!!</u> </u></p>
@@ -106,7 +104,7 @@ So up for some Sonic solo adventures?
 <hr>
 
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">  rings
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif">  rings
 </p>
 
 <p>After reading this issue, I was a little depressed. I'm not
@@ -135,3 +133,7 @@ it, should be a look-back issue. And Knuckles #10 will ship December
 </td>
 
 </td></tr></table>
+
+</table>
+</body>
+</html>
