--- a/sonichq/comics/reviews/sonic/s59.htm
+++ b/sonichq/comics/reviews/sonic/s59.htm
@@ -6,11 +6,9 @@
 </head>
 <body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
-<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="/sonichq/comics/images/background.jpg">
+<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%>
 
-<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="/sonichq/comics/images/background.jpg">
+<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" >
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +21,7 @@ This Week In Review: Sonic #59 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="https://web.archive.org/20011106000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic59.jpg"></p>
+<center><p><IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic59.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Al And Cal Have Returned!!! From Here To Stupidity - Let The Pointlessness Begin!</p>
 <p>Sonic The Hedgehog #59<br>
@@ -59,7 +57,7 @@ We pause now for some bourgeois legalities:
 
 <p>Anyway, Sonic and Tails are thrown clear while the fate of Bene and Lokai (I'll explain that one in a minute, don't worry) remains undetermined. 
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> rings
 </p>
 
 <p>Sonic fan Mark Lungo called this story "Sonic and Tails in 'The Gamesters of Triskelion'" and I honestly can't improve on that description.  "Gamesters" was an episode of the original Star Trek series where Kirk and the gang are forced to fight each other against their will for the amusement of an alien race.  If they don't go along they get zapped by these Pavlovian collars that induce pain.  It's either that or they have to read Sonic #33.  The story also reminded me of another Star Trek ep, "Let That Be Your Last Battlefield" where a black-and-white alien, Bene, fights a white-and-black alien, Lokai, pretty much "like forever and ever," to quote Tails.  Mike Gallagher managed to avoid that episode's heavy-handed preachiness about race relations, but he also failed to come up with a plausible explanation as to how A1 and A2 knew about the Ultimate Asininity and its effects on their zone.  I never got to see the dim-witted duo in their first appearance, but if their zone was REALLY so devoid of natural law and order they might have been capable of some nicely Pythonesque touches of anarchy--think WackyLand on "Tiny Toons."  I don't know whose decision it was to render them as humorless hunks of hardware, but it didn't seem to help the story.  Sixteen pages and a fight later, Sonic and Tails are right back where they started from. 
@@ -71,13 +69,13 @@ We pause now for some bourgeois legalities:
 <p>Sally either wrapped up the rebuilding of Mobitropolis early or else her idea of R&R is to go skydiving.  Personally, I agree with Steven Wright on the subject: "I see no reason to get out of a plane while it's working."  But Sally takes the plunge along with Hershey, Lupe, Rotor, Hamlin, and a newcomer named Erik (a horse morph).  She looks like she's enjoying herself, and it's not like she hasn't done this before: she's Been There Done That Pulled The Ripcord in "Go Ahead, Mecha My Day" (Sonic #25).  But her mid-air reverie is cut short as she lands: "Unfortunately I have to come down to Earth sometime."  I was a little put off by the use of the E-word.  I STILL think Mobius is a different planet from Earth, but that's just me.  A young bear-like Mobian (I can only guess from the ears) complements Sally on her performance and invites her and her friends for vittles.  They take him up on his offer as soon as they round up a couple stray members (and BOY, would I like to know what was talked about over dinner; come to think of it, I wish we'd seen the dinner party between the Freedom Fighters, Sonic's folks, and Knuckles and Julie-Su in "Unfinished Business" (#53)).  By the time the group gets back to Mobitropolis at nightfall, Rosie invites Sally in for a nightcap while unbeknownst to her, King Max and Geoffrey have something else in mind. 
 <hr>
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif">
 </p>
 
 <p>Not a whole lot happens in this story plotwise, but it's a good mood piece.  Sally's field trip didn't feel contrived or seriously out of character, and it was a suitable counterpoint to the story's sinister climax.  Sally comes off as a very open and affable person, which is more than I can say for Max and Geoff.  Manny Galan is showing vast improvement as a Sally artist, and he does justice to Hershey, Rosie and Lupe (I especially liked Lupe's pose at the top of page 5). 
      About the only problem I have with the story (and it may be on its way to being rectified in future installments) is the conspicuous absence of Sonic from Sally's thoughts.  The readers don't have any such trouble (go back to the Fan Art section).  I don't expect Sally to go around singing the Mobian equivalent of "My Heart Will Go On" but I'd like to think that she bestows a thought or two on Sonic now and then.  Maybe his name came up during dinner, I don't know.  In any event, it's a good set-up: let's see what the next installment brings. 
 
-<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
+<p><b>Overall Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> 
 </p>
 
 <hr>
@@ -85,3 +83,7 @@ We pause now for some bourgeois legalities:
 </td>
 
 </td></tr></table>
+
+</table>
+</body>
+</html>
