--- a/sonichq/comics/reviews/sonic/s78.htm
+++ b/sonichq/comics/reviews/sonic/s78.htm
@@ -98,8 +98,8 @@ This story is mostly all "been there, done that, got the T-shirt" to me. It may 
   </table>
   <table border="0">
     <tr> 
-      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','/sonichq/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','/sonichq/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
