--- a/sonichq/comics/scans/sonic76-100.html
+++ b/sonichq/comics/scans/sonic76-100.html
@@ -14,7 +14,7 @@
   | <a href="specials.html">Specials</a> | <a href="fleetway1-25.html">Fleetway</a> | <a href="triple.html">Collages</a> | <a href="miniseries.html">Miniseries</a><br>
   </font></b></font>
 <font color="#CCCCCC"><font face="Arial, Helvetica, sans-serif" size="2"><a href="sonic1-25.html"><b>1-25</b></a><b>
-  | <a href="sonic26-50.html">26-50</a> | <a href="sonic51-75.html">51-75</a> | 76-100<br><br>
+  | <a href="sonic26-50.html">26-50</a> | <a href="sonic51-75.html">51-75</a> | 76-100 | <a href="sonic101-125.html">101-125</a><br><br>
   </font></b></font>
 
 
@@ -96,7 +96,7 @@ alt="Sonic The Hedgehog #79" width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic80.jpg" 
 alt="Sonic The Hedgehog #80" width=134 height=208></A>
 </TD>
-
+</tr>
 <TR ALIGN=CENTER>
 <TD><center>
 <font size=2 face=arial><b>Sonic #81</font>
@@ -141,7 +141,7 @@ alt="Sonic The Hedgehog #84" width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic85.jpg" 
 alt="Sonic The Hedgehog #85" width=134 height=208></A>
 </TD>
-
+</tr>
 <TR ALIGN=CENTER>
 <TD><center>
 <font size=2 face=arial><b>Sonic #86</font>
@@ -186,7 +186,7 @@ alt="Sonic The Hedgehog #89" width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic90.jpg" 
 alt="Sonic The Hedgehog #90" width=134 height=208></A>
 </TD>
-
+</tr>
 
 <TR ALIGN=CENTER>
 <TD><center>
@@ -208,30 +208,76 @@ alt="Sonic The Hedgehog #90" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/sonic/large/sonic91.jpg" width=134 height=208>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic91.jpg">
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic91.jpg" 
 alt="Sonic The Hedgehog #91" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/sonic/large/sonic92.jpg" width=134 height=208>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic92.jpg">
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic92.jpg" 
 alt="Sonic The Hedgehog #92" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/sonic/large/sonic93.jpg" width=134 height=208>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic93.jpg">
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic93.jpg" 
 alt="Sonic The Hedgehog #93" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/sonic/large/sonic94.jpg" width=134 height=208>
-<IMG SRC="/sonichq/comics/images/covers/sonic/large/sonic94.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic94.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic94.jpg" 
 alt="Sonic The Hedgehog #94" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/sonic/large/nc.jpg" width=134 height=208>
-<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/nc.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic95.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic95.jpg" 
 alt="Sonic The Hedgehog #95" width=134 height=208></A>
 </TD>
+</tr>
+<TR ALIGN=CENTER>
+<TD><center>
+<font size=2 face=arial><b>Sonic #96</font>
+</TD>
+<TD><center>
+<font size=2 face=arial><b>Sonic #97</font>
+</TD>
+<TD><center>
+<font size=2 face=arial><b>Sonic #98</font>
+</TD>
+<TD><center>
+<font size=2 face=arial><b>Sonic #99</font>
+</TD>
+<TD><center>
+<font size=2 face=arial><b>Sonic #100</font>
+</TD>
+</TR>
 
-
-</TR></TABLE>
+<TR>
+<TD><center>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic96.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic96.jpg" 
+alt="Sonic The Hedgehog #96" width=134 height=208></A>
+</TD>
+<TD><center>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic97.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic97.jpg" 
+alt="Sonic The Hedgehog #97" width=134 height=208></A>
+</TD>
+<TD><center>
+<A HREF="/sonichq/comics/images/covers/sonic/large/nc.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/nc.jpg" 
+alt="Sonic The Hedgehog #98" width=134 height=208></A>
+</TD>
+<TD><center>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic99.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic99.jpg" 
+alt="Sonic The Hedgehog #99" width=134 height=208></A>
+</TD>
+<TD><center>
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic100.jpg">
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic100.jpg" 
+alt="Sonic The Hedgehog #100" width=134 height=208></A>
+</TD>
+</TR></TABLE><br>
+<p>
+</body>
+</html>
