--- a/sonichq/comics/scans/triple2.html
+++ b/sonichq/comics/scans/triple2.html
@@ -49,34 +49,45 @@
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=50% bgcolor=black>
 
-
 <TR ALIGN=CENTER>
-<TD><center>
-<font size=2 face=arial><b>The Sonic Anniversary Covers</font>
+<TD ALIGN=center>
+<font size=2 face=arial><b>The Sonic Anniversary Covers</b></font>
 </TD>
 </TR>
 
 <TR>
-<TD><center>
-<center>
+<TD ALIGN=center>
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/collage2.jpg" 
+alt="Sonic Anniversary Issues: 25, 50, 75, and 100"></TD>
+</TR>
+
+<TR ALIGN=CENTER>
+<TD ALIGN=center>
+<font size=2 face=arial><b>The Sonic Anniversary Covers (Original Pic)</b></font>
+</TD>
+</TR>
+
+<TR>
+<TD ALIGN=center>
 <IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/collage.jpg" 
-alt="Sonic Anniversary"></A>
-</TD>
+alt="Sonic Anniversary Issues: 25, 50, 50 UnCut, and 75)"></TD>
 </TR>
 
 <TR ALIGN=CENTER>
-<TD><center>
-<font size=2 face=arial><b>Sonic Adventure: Perfect Chaos Arc</font>
+<TD ALIGN=center>
+<font size=2 face=arial><b>Sonic Adventure: Perfect Chaos Arc</b></font>
 </TD>
 </TR>
 
 <TR>
-<TD><center>
-<center>
+<TD ALIGN=center>
 <IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/perfect.jpg" 
-alt="Sonic Adventure: Perfect Chaos"></A>
-</TD>
+alt="Sonic Adventure: Perfect Chaos"></TD>
 </TR>
 
-
-</TR></TABLE>
+</TABLE>
+<br>
+<p>
+<br>
+</body>
+</html>
