--- a/sonichq/design/index.html
+++ b/sonichq/design/index.html
@@ -25,7 +25,7 @@ document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="t
 <br>
 
 <span class=pathlinks><table class=glow>
-<a href=/>Design HQ</a></table></span>
+<a href=/sonichq/>Design HQ</a></table></span>
 
 <center>
 
@@ -112,7 +112,7 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 
 <center><u>Welcome To Design HQ!</u></center><p>This page is obviously under construction, but I want to open it today.  It's got some EZBoard admin tricks and software links right now, and I'm adding tons more over the next week.
 
-<center><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><IMG SRC="/sonichq/scripts/counter/2.gif" WIDTH=15 HEIGHT=20 ALT="2"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/5.gif" WIDTH=15 HEIGHT=20 ALT="5"><br><font face="arial" size=-2 color=green>hits since March 30, 2001.</font></center>
+<center><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/2.gif" WIDTH=15 HEIGHT=20 ALT="2"><IMG SRC="/sonichq/scripts/counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><IMG SRC="/sonichq/scripts/counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="/sonichq/scripts/counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><br><font face="arial" size=-2 color=green>hits since March 30, 2001.</font></center>
 </font></td></tr>
 </table>
 <!end main table middle>
