--- a/sonichq/megaman/index.html
+++ b/sonichq/megaman/index.html
@@ -25,15 +25,14 @@ document.write('<link rel=stylesheet href=/sonichq/megaman/css/' + theme + '.css
 <body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
 &nbsp;
 
-<center><IFRAME SRC="https://web.archive.org/20011108000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
-MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011108000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
-</SCRIPT>
-<NOSCRIPT>
-<A HREF="https://web.archive.org/20011108000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011108000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
-</NOSCRIPT>
-</IFRAME>
-</center>
+<center><!-- Place the following code where you want an ad to appear -->
+<IFRAME SRC="https://web.archive.org/20011209000000/http://ads.ad-flow.com/?DC=ztnet-ron-top&DH=Y&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<ILAYER SRC="https://web.archive.org/20011209000000/http://ads.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank&DH=Y" HEIGHT="60" WIDTH="468">
+</ILAYER>
+<NOLAYER>
+<A HREF="https://web.archive.org/20011209000000/http://ads.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011209000000/http://ads.ad-flow.com/?SIT=ztnet-ron-top" HEIGHT="60" WIDTH="468"></A>
+</NOLAYER>
+</IFRAME></center>
 
 <br>
 
@@ -114,7 +113,7 @@ Complete information pages for each game, including tips, passwords, damage data
 A list of episodes from the MM cartoons.<br><br>
 </div>
 <div class=titlebar><table class=glow>
-<a href=music.php3>HQ Music</a> - updated 05-29-01
+<a href=music.php3>HQ Music</a> - updated 11-13-01
 </table></div>
 <div class=itemtext>
 Over 500 Sonic and Mega Man music files.<br><br>
@@ -141,7 +140,7 @@ Music, pics, sprites, windows themes, and videos.<br><br>
 Site stuff, surveys, interactive games, and more.<br><br>
 </div>
 <div class=titlebar><table class=glow>
-<a href=https://web.archive.org/20011108000000/http://pub12.ezboard.com/fsonichqcommunityfrm14 href1=http://bbs.onecenter.com/hq href2=https://web.archive.org/20011108000000/http://disc.server.com/Indices/70464.html>The Robot Museum Forum</a>
+<a href=https://web.archive.org/20011209000000/http://pub12.ezboard.com/fsonichqcommunityfrm14 href1=https://web.archive.org/20011209000000/http://bbs.onecenter.com/hq href2=https://web.archive.org/20011209000000/http://disc.server.com/Indices/70464.html>The Robot Museum Forum</a>
 </table></div>
 <div class=itemtext>
 our message board.  This page is also our guest book, and you can contact the MMHQ staff here.<br><br>
@@ -163,14 +162,14 @@ Info and links for MM sites and fans.<br><br>
 
 <p><!-- Start of Nedstat Basic code -->
 
-<a href="https://web.archive.org/20011108000000/http://usa.nedstatbasic.net/cgi-bin/viewstat?name=mmhq"><img
-src="https://web.archive.org/20011108000000/http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=mmhq"
+<a href="https://web.archive.org/20011209000000/http://usa.nedstatbasic.net/cgi-bin/viewstat?name=mmhq"><img
+src="https://web.archive.org/20011209000000/http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=mmhq"
 border=0 alt="" nosave width=22 height=22></a>
 <script type="text/javascript" language="JavaScript">
 <!--
  d=document;
- d.write("<img src=\"https://web.archive.org/20011108000000/http://usa.nedstatbasic.net");
- d.write("/sonichq/cgi-bin/referstat.gif?");
+ d.write("<img src=\"https://web.archive.org/20011209000000/http://usa.nedstatbasic.net");
+ d.write("/cgi-bin/referstat.gif?");
  d.write("name=mmhq&refer=");
  d.write(escape(top.document.referrer));
  d.write("\" width=1 height=1 align=\"right\">");
@@ -178,13 +177,13 @@ border=0 alt="" nosave width=22 height=22></a>
 </script>
 
 <!-- End of Nedstat Basic code -->
-<IMG SRC="counter/5.gif" WIDTH=15 HEIGHT=20 ALT="5"><IMG SRC="counter/5.gif" WIDTH=15 HEIGHT=20 ALT="5"><IMG SRC="counter/8.gif" WIDTH=15 HEIGHT=20 ALT="8"><IMG SRC="counter/3.gif" WIDTH=15 HEIGHT=20 ALT="3"><IMG SRC="counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><IMG SRC="counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4">
+<IMG SRC="counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><IMG SRC="counter/2.gif" WIDTH=15 HEIGHT=20 ALT="2"><IMG SRC="counter/8.gif" WIDTH=15 HEIGHT=20 ALT="8"><IMG SRC="counter/5.gif" WIDTH=15 HEIGHT=20 ALT="5">
 
 <br><br><a href=features/updateboard.html target=_blank>Update Board</a>
 
 <br><br>Part of <a href=/sonichq/ target=_blank>Sonic HQ Network</a>
 
-<br><br>Hosted by <a href=https://web.archive.org/20011108000000/http://www.emulationzone.org target=_blank>Emulation Zone</a>
+<br><br>Hosted by <a href=https://web.archive.org/20011209000000/http://www.emulationzone.org target=_blank>Emulation Zone</a>
 </font></td>
 <td width=2 bgcolor=000000>&nbsp;</td>
 </tr></table>
