--- a/sonichq/comics/reviews/sonic/s53.htm
+++ b/sonichq/comics/reviews/sonic/s53.htm
@@ -6,11 +6,9 @@
 </head>
 <body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
-<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="/sonichq/comics/images/background.jpg">
+<TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%>
 
-<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="/sonichq/comics/images/background.jpg">
+<TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" >
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +21,7 @@ This Week In Review: Sonic #53 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="https://web.archive.org/20011106000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic53.jpg"></p>
+<center><p><IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic53.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Look Everybody !!! Its Howard The Duck !!!!</p>
 <p>Sonic The Hedgehog #53<br>
@@ -65,7 +63,7 @@ Sonic's real first name is not Sonic, could be anything. A good start
 for maybe another mini-series or quest.
 <hr>
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> 1/2 rings
 </p>
 
 <p>Its odd that the shortest story ran first, but in the scheme of things it really worked out well in conjuction with the backup - which just happened to be longer. Made for a nice transition. Charater development like <u>THIS</u> we DEFINETELY need.
@@ -102,7 +100,7 @@ Another big, big fight, in this fight, Sonic some how broke Ixis' magic
 wand and they intruders just...disappeared.
 <hr>
 
-<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif">
 </p>
 
 <p>This story is not that bad, just a little too confusing. It leaves you wondering how Naugus will come to play in future issues as well as other things. But it just didn't read right for some reason.
@@ -113,10 +111,14 @@ After two issues of simple cover arts, we're back to complicated covers
 now. And for all you Nights fans out there, Archie is making a three issue 
 mini-series of Nights. It's going to be drawn by Spazainte and Manny. Lets see how much they butcher it !!! ^___^
 
-<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
+<p><b>Overall Rating:<img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"><img src="/sonichq/comics/images/ring.gif"> 
 </p>
 
 
 </td>
 
 </td></tr></table>
+
+</table>
+</body>
+</html>
